[package]
name = "async-cron-scheduler"
description = "Runtime-agnostic async task scheduler with cron expression support"
repository = "https://github.com/pop-os/async-cron-scheduler"
version = "2.0.1"
license = "MPL-2.0"
authors = ["Michael Aaron Murphy <michael@mmurphy.dev>"]
categories = [ "asynchronous", "date-and-time" ]
keywords = ["cron", "job", "scheduler", "tokio", "smol"]
edition = "2021"

[dependencies]
chrono = "0.4.41"
cron = { version = "0.15.0", optional = true }
croner = { version = "3.0.0", optional = true }
slotmap = "1.0.7"
futures = "0.3.31"
tachyonix = "0.3.1"
tracing = { version = "0.1.41", optional = true }

[features]
default = ["cron"]
cron = ["dep:cron"]
croner = ["dep:croner"]
logging = ["dep:tracing"]

[dev-dependencies]
smol = "2.0.2"
